--- a/results/song_degradation.ipynb
+++ b/results/song_degradation.ipynb
@@ -3872,9 +3872,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyCharm (pyfinch)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pycharm-24f3f082"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3886,7 +3886,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
