--- a/results/song.ipynb
+++ b/results/song.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "markdown",
    "id": "24ddbe60",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Song analysis\n",
     "- Number of intro notes, song/call proportions, motif duration, coefficient of variation of motif durations\n",
@@ -1541,9 +1544,6 @@
    "execution_count": 20,
    "id": "752fd837-efa1-4b4c-a8f1-507c55ad8317",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [
