--- a/results/song_fr_cross_corr.ipynb
+++ b/results/song_fr_cross_corr.ipynb
@@ -336,7 +336,7 @@
     "g.set_axis_labels('Peak Latency (ms)', 'Cross-correlation', fontsize=12)\n",
     "\n",
     "# run stats\n",
-    "from util.stats import two_sample_ttest, paired_ttest, rank_sum_test, signed_rank_test\n",
+    "from util.stats import two_sample_ttest\n",
     "pre = df.query('taskName == \"Predeafening\"')['crossCorrMax']\n",
     "post = df.query('taskName == \"Postdeafening\"')['crossCorrMax']\n",
     "_, _, msg, sig = two_sample_ttest(pre, post)\n",
