--- a/results/song.ipynb
+++ b/results/song.ipynb
@@ -487,9 +487,6 @@
    "execution_count": 4,
    "id": "6689c8c4-3775-4dcd-9975-c489b8c3beff",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -1017,9 +1014,7 @@
    "execution_count": 10,
    "id": "80e06aec",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -1181,9 +1176,7 @@
    "execution_count": 12,
    "id": "56cf7351-c18b-4e22-b87e-792b1e2c88f1",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [
     {
